--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imgur-Clone</title>
-    <link rel="stylesheet" href="imgur.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container">
@@ -41,5 +41,5 @@
 </body>
 </html>
 
-<script src="imgur.js"></script>
+<script src="index.js"></script>
 
